--- a/Client/src/app/app.component.css
+++ b/Client/src/app/app.component.css
@@ -19,8 +19,8 @@
     flex-direction: column;
     gap: 10px;
     transition: width 0.3s ease;
-    z-index: 10;
     background-color: var(--sibasiGrey);
+    
   }
   
   .main{
